--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -9,17 +9,409 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent">
+    </Toolbar>
 
-    <TextView
-        android:id="@+id/text"
-        android:text="마이페이지"
-        android:textSize="24sp"
-        android:layout_width="wrap_content"
+    <ScrollView
+
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/constraint"
+            >
+            <LinearLayout
+                android:id="@+id/layout1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                >
+                <ImageView
+                    android:background="@drawable/profileshape"
+                    android:layout_marginTop="20sp"
+                    android:layout_marginLeft="20sp"
+                    android:layout_marginBottom="20sp"
+                    android:layout_width="60sp"
+                    android:layout_height="60sp"
+                    />
+                <TextView
+                    android:id="@+id/profileName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="도구리"
+                    android:textStyle="bold"
+                    android:textSize="26sp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20sp" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="130sp"
+                    android:text="프로필 보기"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/layout1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:orientation="vertical"
+                >
+
+                <LinearLayout
+                    android:id="@+id/layout3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/layout1">
+
+                    <LinearLayout
+                        android:id="@+id/layout4"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/layout1">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="20sp"
+                            android:layout_marginTop="10sp"
+                            android:text="나의 매치"
+                            android:textSize="28sp"
+                            android:textStyle="bold" />
+
+                        <!--            리스트입니다. -->
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="60sp"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="10sp">
+
+                            <ImageView
+                                android:layout_width="26sp"
+                                android:layout_height="22sp"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="20sp"
+                                android:background="@drawable/icon_heart"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="24sp"
+                                android:text="관심목록"
+                                android:textSize="24sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="60sp"
+                            android:layout_gravity="center">
+
+                            <ImageView
+                                android:layout_width="26sp"
+                                android:layout_height="22sp"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="20sp"
+                                android:background="@drawable/google_docs" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="24sp"
+                                android:text="매치글 게시내역"
+                                android:textSize="24sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="60sp"
+                            android:layout_gravity="center">
+
+                            <ImageView
+                                android:layout_width="32sp"
+                                android:layout_height="22sp"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="15sp"
+                                android:background="@drawable/send_mail" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="24sp"
+                                android:text="도전장 발신내역"
+                                android:textSize="24sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="60sp"
+                            android:layout_gravity="center">
+
+                            <ImageView
+                                android:layout_width="28sp"
+                                android:layout_height="28sp"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="20sp"
+                                android:background="@drawable/medal" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="24sp"
+                                android:text="나의 랭킹"
+                                android:textSize="24sp" />
+                        </LinearLayout>
+
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20sp"
+                        android:layout_marginTop="10sp"
+                        android:text="팀 매치"
+                        android:textSize="28sp"
+                        android:textStyle="bold" />
+
+                    <!--            리스트입니다. -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="60sp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10sp">
+
+                        <ImageView
+                            android:layout_width="26sp"
+                            android:layout_height="24sp"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="20sp"
+                            android:background="@drawable/icon_peoples" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="24sp"
+                            android:text="나의 팀 목록"
+                            android:textSize="24sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="60sp"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:layout_width="26sp"
+                            android:layout_height="22sp"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="20sp"
+                            android:background="@drawable/google_docs" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="24sp"
+                            android:text="팀 매치글 게시내역"
+                            android:textSize="24sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="60sp"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:layout_width="32sp"
+                            android:layout_height="22sp"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="15sp"
+                            android:background="@drawable/send_mail" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="24sp"
+                            android:text="팀 도전장 발신내역"
+                            android:textSize="24sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="60sp"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:layout_width="28sp"
+                            android:layout_height="28sp"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="20sp"
+                            android:background="@drawable/medal" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="24sp"
+                            android:text="팀 랭킹"
+                            android:textSize="24sp" />
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="기타"
+                    android:textSize="28sp"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="20sp"
+                    android:layout_marginTop="10sp"
+                    />
+
+<!--            리스트입니다. -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60sp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10sp"
+                    >
+
+                    <ImageView
+                        android:layout_width="28sp"
+                        android:layout_height="25sp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="20sp"
+                        android:background="@drawable/icon_gps1" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="내동네 설정"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="24sp"
+                        android:textSize="24sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60sp"
+                    android:layout_gravity="center"
+                    >
+
+                    <ImageView
+                        android:layout_width="28sp"
+                        android:layout_height="28sp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="20sp"
+                        android:background="@drawable/icon_gps2" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="동네 인증하기"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="24sp"
+                        android:textSize="24sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60sp"
+                    android:layout_gravity="center"
+                    >
+
+                    <ImageView
+                        android:layout_width="26sp"
+                        android:layout_height="22sp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="20sp"
+                        android:background="@drawable/icon_tag" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="알림 키워드 설정"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="24sp"
+                        android:textSize="24sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60sp"
+                    android:layout_gravity="center"
+                    >
+
+                    <ImageView
+                        android:layout_width="26sp"
+                        android:layout_height="22sp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="20sp"
+                        android:background="@drawable/icon_headset" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="자주 묻는 질문"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="24sp"
+                        android:textSize="24sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60sp"
+                    android:layout_gravity="center"
+                    >
+
+                    <ImageView
+                        android:layout_width="26sp"
+                        android:layout_height="24sp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="20sp"
+                        android:background="@drawable/icon_question" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="건의 사항"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="24sp"
+                        android:textSize="24sp" />
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
