--- a/app/src/main/res/layout/login_signup.xml
+++ b/app/src/main/res/layout/login_signup.xml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/imglogo"
-        android:layout_width="150sp"
-        android:layout_height="150sp"
-        android:layout_marginTop="28dp"
-        android:src="@drawable/logo"
+        android:layout_width="100sp"
+        android:layout_height="100sp"
         android:layout_marginLeft="10sp"
+        android:layout_marginTop="60sp"
+        android:src="@drawable/profile"
+        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <ImageView
+        android:layout_width="40sp"
+        android:layout_height="40sp"
+        android:layout_marginTop="132dp"
+        android:background="@drawable/icon_camera"
+        app:layout_constraintHorizontal_bias="0.579"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:background="null"
+            android:background="@null"
             android:hint="  이름   "
             />
 
@@ -58,11 +71,50 @@
             android:layout_width="match_parent"
             android:layout_height="40sp"
             android:layout_gravity="center"
-            android:background="null"
+            android:background="@null"
             android:hint="  아이디 입력  "
             />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout3_1"
+        android:layout_width="200sp"
+        android:layout_height="40sp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_marginTop="20sp"
+        android:background="@drawable/edittext_custom"
+        app:layout_constraintTop_toBottomOf="@+id/layout2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="101sp"
+        >
+
+
+        <EditText
+            android:id="@+id/nickname"
+            android:layout_width="match_parent"
+            android:layout_height="40sp"
+            android:layout_gravity="center"
+            android:background="@null"
+            android:hint="  이용하실 닉네임 입력  "
+            />
+    </LinearLayout>
+
+
+    <Button
+        android:id="@+id/nickname_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="40sp"
+        android:text="중복확인"
+        android:textColor="@color/white"
+        app:layout_constraintLeft_toRightOf="@+id/layout3_1"
+        app:layout_constraintTop_toBottomOf="@+id/layout2"
+        android:layout_marginTop="20sp"
+        android:layout_marginLeft="12sp"
+        android:background="@drawable/loginbutton_custom"
+        />
 
     <LinearLayout
         android:layout_width="300sp"
@@ -70,7 +122,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layout1"
-        android:layout_marginTop="110sp"
+        android:layout_marginTop="140sp"
         android:gravity="left"
         android:background="@drawable/edittext_custom"
         android:id="@+id/layout1_1"
@@ -81,7 +133,7 @@
             android:layout_height="wrap_content"
             android:hint="비밀번호 입력"
             android:layout_marginLeft="10sp"
-            android:background="null"
+            android:background="@null"
             android:layout_gravity="center"
             />
     </LinearLayout>
@@ -104,7 +156,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10sp"
-            android:background="null"
+            android:background="@null"
             android:hint="비밀번호 확인" />
     </LinearLayout>
 
@@ -124,7 +176,7 @@
             android:layout_width="match_parent"
             android:layout_height="40sp"
             android:layout_gravity="center"
-            android:background="null"
+            android:background="@null"
             android:hint="  전화번호 입력  "
             />
     </LinearLayout>
@@ -163,7 +215,7 @@
             android:layout_width="300sp"
             android:layout_height="40sp"
             android:layout_gravity="center"
-            android:background="null"
+            android:background="@null"
             android:hint="  인증번호를 입력해 주세요." />
 
 
