--- a/app/src/main/res/layout/login_signup.xml
+++ b/app/src/main/res/layout/login_signup.xml
@@ -87,21 +87,17 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
 
-
     <EditText
         android:id="@+id/password_edit"
         android:layout_width="375sp"
         android:layout_height="45sp"
         android:layout_gravity="center"
+        android:layout_marginTop="8dp"
         android:background="@drawable/edittext_custom"
-        android:paddingLeft="10sp"
         android:hint="비밀번호 입력"
-        android:layout_marginTop="10sp"
-        app:layout_constraintTop_toBottomOf="@id/caution_text"
+        android:paddingLeft="10sp"
         app:layout_constraintLeft_toLeftOf="@id/id_edit"
-        />
-
-
+        app:layout_constraintTop_toBottomOf="@id/caution_text" />
 
     <EditText
         android:id="@+id/password_chk_edit"
@@ -163,7 +159,6 @@
         android:textColor="@color/white"
         android:layout_marginTop="10sp"
         android:layout_marginLeft="12sp"
-        app:layout_constraintLeft_toRightOf="@id/password_chk_edit"
         app:layout_constraintRight_toRightOf="@id/password_edit"
         app:layout_constraintTop_toBottomOf="@id/tel"
         android:background="@drawable/loginbutton_custom" />
@@ -189,7 +184,6 @@
         android:textColor="@color/white"
         android:layout_marginTop="10sp"
         android:layout_marginLeft="12sp"
-        app:layout_constraintLeft_toRightOf="@id/password_chk_edit"
         app:layout_constraintRight_toRightOf="@id/password_edit"
         app:layout_constraintTop_toBottomOf="@id/phone_chk_btn"
         android:background="@drawable/loginbutton_custom" />
