--- a/app/src/main/res/layout/login_signup.xml
+++ b/app/src/main/res/layout/login_signup.xml
@@ -21,7 +21,7 @@
         android:fontFamily="@font/font_signiture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="회원가입"
+        android:text="회원가입 "
         android:layout_marginTop="20sp"
         android:layout_marginLeft="10sp"
         android:textSize="32sp"
@@ -96,6 +96,7 @@
         android:background="@drawable/edittext_custom"
         android:hint="비밀번호 입력"
         android:paddingLeft="10sp"
+        android:inputType="textPassword"
         app:layout_constraintLeft_toLeftOf="@id/id_edit"
         app:layout_constraintTop_toBottomOf="@id/caution_text" />
 
@@ -108,6 +109,7 @@
         android:background="@drawable/edittext_custom"
         android:hint="비밀번호 재입력"
         android:paddingLeft="10sp"
+        android:inputType="textPassword"
         app:layout_constraintLeft_toLeftOf="@id/password_edit"
         app:layout_constraintTop_toBottomOf="@id/password_edit" />
 
