--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -82,6 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="비밀번호 입력"
+            android:inputType="textPassword"
             android:layout_marginLeft="10sp"
             android:layout_gravity="center_vertical"
             />
