--- a/app/src/main/res/layout/login_signup.xml
+++ b/app/src/main/res/layout/login_signup.xml
@@ -7,11 +7,11 @@
 
     <ImageView
         android:id="@+id/imglogo"
-        android:layout_width="150sp"
-        android:layout_height="150sp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="28dp"
         android:src="@drawable/logo"
-        android:layout_marginLeft="10sp"
+        android:layout_marginLeft="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,42 +34,40 @@
 
     <EditText
         android:id="@+id/name_edit"
-        android:layout_width="375sp"
-        android:layout_height="45sp"
+        android:layout_width="375dp"
+        android:layout_height="45dp"
         android:layout_gravity="center"
+        android:layout_marginTop="16dp"
         android:background="@drawable/edittext_custom"
-        android:paddingLeft="10sp"
         android:hint="이름"
-        android:layout_marginTop="20sp"
-        app:layout_constraintTop_toBottomOf="@id/imglogo"
-        app:layout_constraintLeft_toLeftOf="@id/id_edit"
-        />
+        android:paddingLeft="10sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imglogo" />
 
     <EditText
         android:id="@+id/id_edit"
-        android:layout_width="242sp"
-        android:layout_height="45sp"
+        android:layout_width="242dp"
+        android:layout_height="45dp"
         android:layout_gravity="center"
         android:background="@drawable/edittext_custom"
         android:paddingLeft="10sp"
         android:hint="아이디 입력"
-        android:layout_marginLeft="18sp"
         android:layout_marginTop="10sp"
         app:layout_constraintRight_toLeftOf="@id/id_chk_btn"
         app:layout_constraintTop_toBottomOf="@id/name_edit"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/name_edit"
         />
 
     <Button
         android:id="@+id/id_chk_btn"
-        android:layout_width="118sp"
-        android:layout_height="45sp"
+        android:layout_width="118dp"
+        android:layout_height="45dp"
         android:text="중복 확인"
         android:textColor="@color/white"
         android:layout_marginTop="10sp"
         android:layout_marginLeft="12sp"
         app:layout_constraintLeft_toRightOf="@id/id_edit"
-        app:layout_constraintRight_toRightOf="@id/password_edit"
         app:layout_constraintTop_toBottomOf="@id/name_edit"
         android:background="@drawable/loginbutton_custom" />
 
@@ -89,8 +87,8 @@
 
     <EditText
         android:id="@+id/password_edit"
-        android:layout_width="375sp"
-        android:layout_height="45sp"
+        android:layout_width="375dp"
+        android:layout_height="45dp"
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
         android:background="@drawable/edittext_custom"
@@ -102,8 +100,8 @@
 
     <EditText
         android:id="@+id/password_chk_edit"
-        android:layout_width="375sp"
-        android:layout_height="45sp"
+        android:layout_width="375dp"
+        android:layout_height="45dp"
         android:layout_gravity="center"
         android:layout_marginTop="10sp"
         android:background="@drawable/edittext_custom"
@@ -142,57 +140,53 @@
 
     <EditText
         android:id="@+id/phone_edit"
-        android:layout_width="242sp"
-        android:layout_height="45sp"
+        android:layout_width="242dp"
+        android:layout_height="45dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="18sp"
         android:layout_marginTop="10sp"
         android:background="@drawable/edittext_custom"
         android:hint="'-'없이 숫자만 입력"
         android:paddingLeft="10sp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/name_edit"
         app:layout_constraintTop_toBottomOf="@id/tel" />
 
     <Button
         android:id="@+id/phone_chk_btn"
-        android:layout_width="118sp"
-        android:layout_height="45sp"
+        android:layout_width="118dp"
+        android:layout_height="45dp"
         android:text="인증번호받기"
         android:textColor="@color/white"
         android:layout_marginTop="10sp"
-        android:layout_marginLeft="12sp"
-        app:layout_constraintRight_toRightOf="@id/password_edit"
+        app:layout_constraintRight_toRightOf="@id/id_chk_btn"
         app:layout_constraintTop_toBottomOf="@id/tel"
         android:background="@drawable/loginbutton_custom" />
 
     <EditText
         android:id="@+id/phone_chk_edit"
-        android:layout_width="242sp"
-        android:layout_height="45sp"
+        android:layout_width="242dp"
+        android:layout_height="45dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="18sp"
-        android:layout_marginTop="10sp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/edittext_custom"
         android:hint="인증번호 입력"
         android:paddingLeft="10sp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/name_edit"
         app:layout_constraintTop_toBottomOf="@id/phone_edit" />
 
     <Button
         android:id="@+id/certification_btn"
-        android:layout_width="118sp"
-        android:layout_height="45sp"
+        android:layout_width="118dp"
+        android:layout_height="45dp"
         android:text="인증확인"
         android:textColor="@color/white"
         android:layout_marginTop="10sp"
-        android:layout_marginLeft="12sp"
-        app:layout_constraintRight_toRightOf="@id/password_edit"
+        app:layout_constraintRight_toRightOf="@id/id_chk_btn"
         app:layout_constraintTop_toBottomOf="@id/phone_chk_btn"
         android:background="@drawable/loginbutton_custom" />
 
     <Button
-        android:layout_width="375sp"
-        android:layout_height="45sp"
+        android:layout_width="375dp"
+        android:layout_height="45dp"
         android:id="@+id/joinConfirm"
         android:text="가입완료"
         app:layout_constraintLeft_toLeftOf="parent"
